--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,17 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools">
     <application
         android:hardwareAccelerated="true"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Listando"
-        tools:targetApi="31">
-
-        <meta-data
-            android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-8135010806374552~9492991801"/>
+        tools:targetApi="31"
+        android:icon="@drawable/icon"
+        android:roundIcon="@drawable/icon"
+        >
 
         <activity
             android:name=".view.atividades.Principal"
